2010-01-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* tools/genStubs.tcl:   No longer generate a space after "*" and
	                        immediately after a function name, so the
	                        format of function definitions in tcl*Decls.h 
	                        match all other tcl*.h header files.
	* doc/ParseArgs.3:      Change Tcl_ArgvFuncProc, Tcl_ArgvGenFuncProc
	* generic/tcl.h         and GetFrameInfoValueProc to be function
	* generic/tclInt.h      definitions, not pointers, for consistency
	* generic/tclOOInt.h    with all other Tcl function definitions.
	* generic/tclIndexObj.c
	* generic/regguts.h:    CONST -> const
	* generic/tcl.decls     Formatting
	* generic/tclTomMath.decls Formatting
	* generic/tclDecls.h    (regenerated)
	* generic/tclIntDecls.h
	* generic/tclIntPlatDecls.h
	* generic/tclOODecls.h
	* generic/tclOOIntDecls.h
	* generic/tclPlatDecls.h
	* generic/tclTomMathDecls.h

2010-01-28  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOOBasic.c (TclOO_Object_Destroy): Move the execution of
	destructors to a point where they can produce an error. This will not
	work for all destructors, but it does mean that more failing calls of
	them will be caught.
	* generic/tclOO.c (AllocObject, MyDeletedTrace, ObjectRenamedTrace):
	(ObjectNamespaceDeleted): Stop various ways of getting at commands
	with dangling pointers to the object. Also increases the reliability
	of calling of destructors (though most destructors won't benefit; when
	an object is deleted namespace-first, its destructors are not run in a
	nice state as the namespace is partially gone).

2010-01-25  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclOOStubInit.c:   Remove double includes (which causes a
	* generic/tclOOStubLib.c:    warning in CYGWIN compiles)
	* unix/.cvsignore:	     add confdefs.h

2010-01-22  Donal K. Fellows  <dkf@users.sf.net>

	* doc/proc.n: [Bug 1970629]: Define a bit better what the current
	namespace of a procedure is.
